--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,12 @@
             <version>1.0-beta-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.qai</groupId>
+            <artifactId>qai</artifactId>
+            <version>1.1.1-beta-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
