--- a/src/main/resources/org/qoan/services/config_dev.properties
+++ b/src/main/resources/org/qoan/services/config_dev.properties
@@ -25,6 +25,7 @@ search_services.contexts=stock_groups,\
                         wikipedia_fr,wiktionary_fr,\
                         wikipedia_it,wiktionary_it,\
                         wikipedia_pt,wiktionary_pt,\
+                        wikipedia_ru,wiktionary_ru,\
                         wikipedia_se,\
                         wikipedia_zh,wiktionary_zh 
 network_builders.contexts=finance_network_builder,\
@@ -48,6 +49,7 @@ network_builders.contexts=finance_network_builder,\
                         wiki_network_builder_es,\
                         wiki_network_builder_it,\
                         wiki_network_builder_pt,\
+                        wiki_network_builder_ru,\
                         wiki_network_builder_se,\
                         wiki_network_builder_zh\
   
