pretty much a milestone really!
qai & qoan configurations improved- all it now needs is decent testing and implementation of the new features in qoan so that they are visible too.

--- a/src/main/resources/org/qoan/services/config_dev.properties
+++ b/src/main/resources/org/qoan/services/config_dev.properties
@@ -14,42 +14,49 @@
 NODE_NAME=DevWeb
 GRID_NAME=DevGrid
 GRID_PASSWORD=p4ssw0rd
+# Search Services
 search_services.contexts=stock_groups,\
-                        stock_entities,\
-                        procedures,\
-                        pdf_files,\
-                        wikipedia_ar,\
-                        wikipedia_en, wiktionary_en,\
-                        wikipedia_es,wiktionary_es,\
-                        wikipedia_de,wiktionary_de,\
-                        wikipedia_fr,wiktionary_fr,\
-                        wikipedia_it,wiktionary_it,\
-                        wikipedia_pt,wiktionary_pt,\
-                        wikipedia_ru,wiktionary_ru,\
-                        wikipedia_se,\
-                        wikipedia_zh,wiktionary_zh 
+                         stock_entities,\
+                         procedures,\
+                         pdf_files,\
+                         wikipedia_ar,\
+                         wikipedia_en,wiktionary_en,\
+                         wikipedia_es,wiktionary_es,\
+                         wikipedia_de,wiktionary_de,\
+                         wikipedia_fr,wiktionary_fr,\
+                         wikipedia_it,wiktionary_it,\
+                         wikipedia_pt,wiktionary_pt,\
+                         wikipedia_ru,wiktionary_ru,\
+                         wikipedia_se,\
+                         wikipedia_zh,wiktionary_zh
+# Network Builders
 network_builders.contexts=finance_network_builder,\
-                        gene_network_builder,\
-                        semantic_network_builder_de,\
-                        semantic_network_builder_en,\
-                        semantic_network_builder_es,\
-                        semantic_network_builder_it,\
-                        semantic_network_builder_pt,\
-                        semantic_network_builder_se,\
-                        semantic_network_builder_zh,\
-                        syntax_network_builder_de,\
-                        syntax_network_builder_en,\
-                        syntax_network_builder_es,\
-                        syntax_network_builder_it,\
-                        syntax_network_builder_pt,\
-                        syntax_network_builder_se,\
-                        syntax_network_builder_zh,\
-                        wiki_network_builder_de,\
-                        wiki_network_builder_en,\
-                        wiki_network_builder_es,\
-                        wiki_network_builder_it,\
-                        wiki_network_builder_pt,\
-                        wiki_network_builder_ru,\
-                        wiki_network_builder_se,\
-                        wiki_network_builder_zh\
+                          gene_network_builder,\
+                          semantic_network_builder_ar,\
+                          semantic_network_builder_de,\
+                          semantic_network_builder_en,\
+                          semantic_network_builder_es,\
+                          semantic_network_builder_fr,\
+                          semantic_network_builder_zh,\
+                          syntax_network_builder_ar,\
+                          syntax_network_builder_de,\
+                          syntax_network_builder_en,\
+                          syntax_network_builder_es,\
+                          syntax_network_builder_it,\
+                          syntax_network_builder_pt,\
+                          syntax_network_builder_se,\
+                          syntax_network_builder_zh,\
+                          wiki_network_builder_ar,\
+                          wiki_network_builder_de,\
+                          wiki_network_builder_en,\
+                          wiki_network_builder_es,\
+                          wiki_network_builder_fr,\
+                          wiki_network_builder_it,\
+                          wiki_network_builder_ru,\
+                          wiki_network_builder_se,\
+                          wiki_network_builder_pt,\
+                          wiki_network_builder_zh
+#                         semantic_network_builder_it,\
+#                         semantic_network_builder_pt,\
+#                         semantic_network_builder_se,\
   
