--- a/pom.xml
+++ b/pom.xml
@@ -61,18 +61,6 @@
             <version>1.5.0-beta-SNAPSHOT</version>
         </dependency>
 
-        <!-- <dependency>
-             <groupId>com.thewebsemantic</groupId>
-             <artifactId>jenabean</artifactId>
-             <version>1.1</version>
-         </dependency>
-
-         <dependency>
-             <groupId>org.xenei</groupId>
-             <artifactId>PA4RDF</artifactId>
-             <version>1.3</version>
-         </dependency>-->
-
         <dependency>
             <groupId>qube.samsroad</groupId>
             <artifactId>samsroad</artifactId>
@@ -136,25 +124,6 @@
             <version>${vaadin.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
-
-        <!--
-          Needed when using the widgetset optimizer (custom ConnectorBundleLoaderFactory).
-          For widgetset compilation, vaadin-client-compiler is automatically added on the
-          compilation classpath by vaadin-maven-plugin so normally there is no need for an
-          explicit dependency.
-        -->
-        <!--<dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-client-compiler</artifactId>
-            <version>${vaadin.version}</version>
-            <scope>provided</scope>
-        </dependency>-->
-
-        <!-- <dependency>
-             <groupId>com.vaadin</groupId>
-             <artifactId>vaadin-push</artifactId>
-             <version>${vaadin.version}</version>
-         </dependency>-->
 
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -258,21 +227,7 @@
             <artifactId>jetty-rewrite</artifactId>
             <version>${jetty9.version}</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-io</artifactId>
-            <version>${jetty9.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-client</artifactId>
-            <version>${jetty9.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-jsp</artifactId>
-            <version>${jetty9.version}</version>
-        </dependency>-->
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -290,13 +245,6 @@
             <artifactId>guice-servlet</artifactId>
             <version>${guice.version}</version>
         </dependency>
-
-        <!-- Guice-config for using external configurations -->
-        <!--<dependency>-->
-        <!--<groupId>net.jmob</groupId>-->
-        <!--<artifactId>guice.conf</artifactId>-->
-        <!--<version>${guice-conf.version}</version>-->
-        <!--</dependency>-->
 
         <!-- security and all related -->
         <dependency>
@@ -358,31 +306,6 @@
             <artifactId>hazelcast</artifactId>
             <version>${hazelcast.version}</version>
         </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>org.eclipse.rdf4j</groupId>-->
-        <!--<artifactId>rdf4j-runtime</artifactId>-->
-        <!--<version>2.0M2</version>-->
-        <!--</dependency>-->
-
-        <!-- nano-sparql etc. -->
-        <!--<dependency>-->
-        <!--<groupId>com.blazegraph</groupId>-->
-        <!--<artifactId>bigdata-jar</artifactId>-->
-        <!--<version>2.1.0</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>org.openrdf.sesame</groupId>-->
-        <!--<artifactId>sesame-rio-api</artifactId>-->
-        <!--<version>4.1.2</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>org.openrdf.sesame</groupId>-->
-        <!--<artifactId>sesame-model</artifactId>-->
-        <!--<version>4.1.2</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -498,50 +421,6 @@
                     </packagingExcludes>
                 </configuration>
             </plugin>
-            <!--<plugin>
-                <groupId>com.vaadin</groupId>
-                <artifactId>vaadin-client-compiler</artifactId>
-                <version>${vaadin.plugin.version}</version>
-                <configuration>
-                    <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-                    <webappDirectory>${basedir}/target/classes/webapp/VAADIN/widgetsets</webappDirectory>
-                    <draftCompile>true</draftCompile>
-                    <compileReport>true</compileReport>
-                    <style>OBF</style>
-                    <strict>true</strict>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>update-theme</goal>
-                            <goal>update-widgetset</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>-->
-            <!--<plugin>-->
-            <!--<groupId>com.vaadin</groupId>-->
-            <!--<artifactId>vaadin-maven-plugin</artifactId>-->
-            <!--<version>${vaadin.plugin.version}</version>-->
-            <!--<configuration>-->
-            <!--<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>-->
-            <!--<webappDirectory>${basedir}/target/classes/webapp/VAADIN/widgetsets</webappDirectory>-->
-            <!--<draftCompile>false</draftCompile>-->
-            <!--<compileReport>false</compileReport>-->
-            <!--<style>OBF</style>-->
-            <!--&lt;!&ndash;<strict>true</strict>&ndash;&gt;-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<goals>-->
-            <!--&lt;!&ndash;<goal>remove-theme</goal>&ndash;&gt;-->
-            <!--&lt;!&ndash;<goal>remove-widgetset</goal>&ndash;&gt;-->
-            <!--<goal>compile</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-context-plugin</artifactId>
@@ -583,16 +462,9 @@
         </repository>
     </repositories>-->
 
-    <pluginRepositories>
-        <!-- ... -->
+    <!--<pluginRepositories>
 
-        <!--<pluginRepository>
-            &lt;!&ndash;<uuid>vaadin-prereleases</uuid>&ndash;&gt;
-            <name>Vaadin Pre-releases</name>
-            <url>https://maven.vaadin.com/vaadin-prereleases</url>
-        </pluginRepository>-->
-
-    </pluginRepositories>
+    </pluginRepositories>-->
 
     <dependencyManagement>
         <dependencies>
@@ -605,13 +477,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <!--<distributionManagement>
-        <repository>
-            &lt;!&ndash;<uuid>artifactory.repo</uuid>&ndash;&gt;
-            <name>Qoan Project Repository</name>
-            <url>http://192.168.0.249:8081/artifactory/libs-snapshot-local</url>
-        </repository>
-    </distributionManagement>-->
 
 </project>
