--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
         <project.encoding>UTF-8</project.encoding>
         <!--<jetty9.version>9.4.6.v20170531</jetty9.version>-->
-        <jetty9.version>9.4.8.v20171121</jetty9.version>
-
+        <!--<jetty9.version>9.4.8.v20171121</jetty9.version>-->
+        <jetty9.version>9.4.12.v20180830</jetty9.version>
         <guice.version>4.1.0</guice.version>
         <guice-conf.version>1.2.0</guice-conf.version>
 
